// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanup empty files 1`] = `
[
  "will-be-empty",
]
`;

exports[`cleanup falls back to greedy method 1`] = `
[
  ".gitattributes",
  ".github/workflows/pull-request-lint.yml",
  ".gitignore",
  ".projen/deps.json",
  ".projen/files.json",
  ".projen/tasks.json",
  "delete.txt",
]
`;

exports[`cleanup only orphaned files 1`] = `
[
  ".gitattributes",
  ".gitignore",
  "not-this",
  ".projen/files.json",
  ".projen/tasks.json",
  ".github/workflows/pull-request-lint.yml",
]
`;

exports[`cleanup uses cache file 1`] = `
[
  ".gitattributes",
  ".github/workflows/pull-request-lint.yml",
  ".gitignore",
  ".projen/deps.json",
  ".projen/files.json",
  ".projen/tasks.json",
  "foo/bar.txt",
]
`;
